test/isabelle/negative-tests/snoc.p
module Snoc {

  ls = [1,2,3] :- 4


}